--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -1,5 +1,13 @@
 {
   "extends": "../../tsconfig.json",
+  "compilerOptions": {
+    "outDir": "./dist",
+    "rootDir": "./src",
+    "baseUrl": ".",
+    "paths": {
+      "@controllers/*": ["./src/controllers/*"]
+    }
+  },
   "include": [
     "./src/**/*"
   ]
