--- a/.github/workflows/server-production.yml
+++ b/.github/workflows/server-production.yml
@@ -3,7 +3,7 @@ name: Build & Deploy (Production)
 on:
   push:
     branches:
-      - master
+      - production
     paths:
       - 'packages/server/**'
       # - 'packages/another-package/**'
