--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -21,7 +21,9 @@
     "@babel/preset-typescript": "^7.12.7",
     "@types/cors": "^2.8.8",
     "@types/express": "^4.17.9",
+    "@types/supertest": "^2.0.10",
     "babel-plugin-module-resolver": "^4.0.0",
+    "supertest": "^6.0.1",
     "ts-node-dev": "^1.0.0",
     "tsconfig-paths": "^3.9.0"
   }
