--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -3,16 +3,10 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
+      "@server/*": ["./src/*"],
       "@entities/*": ["./src/entities/*"],
       "@repositories/*": ["./src/repositories/*"],
       "@useCases/*": ["./src/useCases/*"]
     }
-  },
-  "include": [
-    "./src/**/*"
-  ],
-  "exclude":[
-    "node_modules",
-    "**/*.spec.ts"
-  ]
+  }
 }
