--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "lib": ["ES6"],
     "allowJs": true,
     "noEmit": true,
+    "strict": true,
     "resolveJsonModule": true,
     "types": ["jest"],
     "typeRoots": [
