--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "uuidv4": "^6.2.5"
+    "uuid": "^8.3.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.8",
@@ -22,6 +22,7 @@
     "@types/cors": "^2.8.8",
     "@types/express": "^4.17.9",
     "@types/supertest": "^2.0.10",
+    "@types/uuid": "^8.3.0",
     "babel-plugin-module-resolver": "^4.0.0",
     "supertest": "^6.0.1",
     "ts-node-dev": "^1.0.0",
