--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -10,8 +10,12 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "uuid": "^8.3.1"
+    "mongodb": "^3.6.3",
+    "mongoose": "^5.10.18",
+    "uuid": "^8.3.1",
+    "yup": "^0.31.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.8",
@@ -19,12 +23,12 @@
     "@babel/node": "^7.12.6",
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-typescript": "^7.12.7",
+    "@shelf/jest-mongodb": "^1.2.3",
     "@types/cors": "^2.8.8",
     "@types/express": "^4.17.9",
-    "@types/supertest": "^2.0.10",
+    "@types/mongoose": "^5.10.1",
     "@types/uuid": "^8.3.0",
     "babel-plugin-module-resolver": "^4.0.0",
-    "supertest": "^6.0.1",
     "ts-node-dev": "^1.0.0",
     "tsconfig-paths": "^3.9.0"
   }
