--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -3,12 +3,12 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@server/*": ["./src/*"],
       "@config/*": ["./src/config/*"],
       "@entities/*": ["./src/entities/*"],
       "@repositories/*": ["./src/repositories/*"],
       "@shared/*": ["./src/shared/*"],
-      "@useCases/*": ["./src/useCases/*"]
+      "@useCases/*": ["./src/useCases/*"],
+      "@server/*": ["./src/*"]
     }
   }
 }
