--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -28,6 +28,7 @@
     "@types/express": "^4.17.9",
     "@types/mongoose": "^5.10.1",
     "@types/uuid": "^8.3.0",
+    "@types/yup": "^0.29.9",
     "babel-plugin-module-resolver": "^4.0.0",
     "ts-node-dev": "^1.0.0",
     "tsconfig-paths": "^3.9.0"
