--- a/packages/eslint-config/.eslintrc.json
+++ b/packages/eslint-config/.eslintrc.json
@@ -1,14 +1,18 @@
 {
   "env": {
-    "es6": true,
+    "es2021": true,
+    "browser": true,
     "node": true,
     "jest": true
   },
   "extends": [
     "standard",
+    "plugin:react/recommended",
     "plugin:@typescript-eslint/recommended",
+    "plugin:prettier/recommended",
     "prettier/@typescript-eslint",
-    "plugin:prettier/recommended"
+    "prettier/standard",
+    "prettier/react"
   ],
   "globals": {
     "Atomics": "readonly",
@@ -16,82 +20,24 @@
   },
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "ecmaVersion": 11,
+    "ecmaFeatures": {
+      "jsx": true
+    },
+    "ecmaVersion": 12,
     "sourceType": "module"
   },
   "plugins": [
+    "react",
     "@typescript-eslint",
     "prettier",
     "eslint-plugin-import-helpers"
   ],
   "rules": {
-    "no-new": "off",
-    "no-prototype-builtins": "off",
-    "no-restricted-syntax": "off",
-    "max-classes-per-file": "off",
-    "@typescript-eslint/no-explicit-any": "off",
-    "no-console": "off",
-    "import/prefer-default-export": "off",
-    "@typescript-eslint/explicit-function-return-type": [
-      "off"
-    ],
-    "@typescript-eslint/no-unused-vars": [
-      "error",
-      {
-        "argsIgnorePattern": "_"
-      }
-    ],
-    "no-useless-constructor": "off",
-    "@typescript-eslint/naming-convention": [
-      "error",
-      {
-        "selector": "interface",
-        "format": [
-          "PascalCase"
-        ],
-        "custom": {
-          "regex": "^I[A-Z]",
-          "match": true
-        }
-      }
-    ],
-    "@typescript-eslint/explicit-module-boundary-types": [
-      "warn",
-      {
-        "allowArgumentsExplicitlyTypedAsAny": true
-      }
-    ],
-    "no-underscore-dangle": "off",
-    "@typescript-eslint/camelcase": "off",
     "prettier/prettier": "error",
-    "class-methods-use-this": "off",
-    "import/extensions": [
-      "error",
-      "ignorePackages",
-      {
-        "ts": "never"
-      }
-    ],
-    "import-helpers/order-imports": [
-      "warn",
-      {
-        "newlinesBetween": "always", // new line between groups
-        "groups": [
-          "module",
-          "/^@server\/shared/",
-          "/^@/",
-          [
-            "parent",
-            "sibling",
-            "index"
-          ]
-        ],
-        "alphabetize": {
-          "order": "asc",
-          "ignoreCase": true
-        }
-      }
-    ]
+    "space-before-function-paren":"off",
+    "react/prop-types": "off",
+    "no-use-before-define": "off",
+    "no-useless-constructor":"off"
   },
   "settings": {
     "import/resolver": {
