Created transaction details page style

--- a/packages/eslint-config/.eslintrc.json
+++ b/packages/eslint-config/.eslintrc.json
@@ -84,6 +84,8 @@
           "/^@repositories/",
           "/^@shared/",
           "/^@useCases/",
+          "/^@components/",
+          "/^@styles/",
           [
             "parent",
             "sibling",
