Started using chakra-ui and created index page with it

--- a/packages/eslint-config/.eslintrc.json
+++ b/packages/eslint-config/.eslintrc.json
@@ -85,7 +85,7 @@
           "/^@shared/",
           "/^@useCases/",
           "/^@components/",
-          "/^@styles/",
+          "/^@theme/",
           [
             "parent",
             "sibling",
