--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -8,14 +8,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.0.3",
+    "@emotion/react": "^11.1.2",
+    "@emotion/styled": "^11.0.0",
+    "framer-motion": "^2.9.5",
     "next": "10.0.3",
     "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "styled-components": "^5.2.1"
+    "react-dom": "17.0.1"
   },
   "devDependencies": {
     "@types/node": "^14.14.10",
-    "@types/react": "^17.0.0",
-    "@types/styled-components": "^5.1.4"
+    "@types/react": "^17.0.0"
   }
 }
