--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -12,8 +12,8 @@
       "@components/*": [
         "./src/components/*"
       ],
-      "@styles/*": [
-        "./src/styles/*"
+      "@theme/*": [
+        "./src/theme/*"
       ]
     }
   },
