--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -12,9 +12,12 @@
     "@emotion/react": "^11.1.2",
     "@emotion/styled": "^11.0.0",
     "framer-motion": "^2.9.5",
+    "moment": "^2.29.1",
     "next": "10.0.3",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-datetime": "^3.0.4",
+    "react-dom": "17.0.1",
+    "reactjs-popup": "^2.0.4"
   },
   "devDependencies": {
     "@types/node": "^14.14.10",
