Added validation on submit new transaction form

--- a/packages/eslint-config/.eslintrc.json
+++ b/packages/eslint-config/.eslintrc.json
@@ -86,6 +86,7 @@
           "/^@useCases/",
           "/^@components/",
           "/^@theme/",
+          "/^@utils/",
           [
             "parent",
             "sibling",
