--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -14,6 +14,9 @@
       ],
       "@theme/*": [
         "./src/theme/*"
+      ],
+      "@utils/*": [
+        "./src/utils/*"
       ]
     }
   },
