--- a/packages/eslint-config/.eslintrc.json
+++ b/packages/eslint-config/.eslintrc.json
@@ -72,6 +72,7 @@
     "@typescript-eslint/no-useless-constructor": "error",
     "@typescript-eslint/camelcase": "off",
     "@typescript-eslint/prefer-for-of": "warn",
+    "@typescript-eslint/explicit-module-boundary-types": "off",
     "import-helpers/order-imports": [
       "warn",
       {
