--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -11,15 +11,18 @@
     "@chakra-ui/react": "^1.0.3",
     "@emotion/react": "^11.1.2",
     "@emotion/styled": "^11.0.0",
+    "axios": "^0.21.0",
     "framer-motion": "^2.9.5",
     "moment": "^2.29.1",
     "next": "10.0.3",
     "react": "17.0.1",
     "react-datetime": "^3.0.4",
     "react-dom": "17.0.1",
-    "reactjs-popup": "^2.0.4"
+    "reactjs-popup": "^2.0.4",
+    "typescript": "^4.1.2"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.15",
     "@types/node": "^14.14.10",
     "@types/react": "^17.0.0"
   }
