Started changing folder organization

--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -3,14 +3,11 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@config/*": [
-        "./src/config/*"
-      ],
       "@entities/*": [
         "./src/entities/*"
       ],
       "@repositories/*": [
-        "./src/repositories/*"
+        "src/external/repositories/*"
       ],
       "@shared/*": [
         "./src/shared/*"
