--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "es2017",
-    "module": "esnext",
+    "target": "esnext",
+    "module": "commonjs",
     "lib": ["ES6"],
     "allowJs": true,
     "noEmit": true,
