Started creating adapters folder and changing archtecture

--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -3,6 +3,9 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
+      "@presentation/*": [
+        "./src/adapters/presentation/*"
+      ],
       "@entities/*": [
         "./src/entities/*"
       ],
@@ -15,7 +18,7 @@
       "@useCases/*": [
         "./src/useCases/*"
       ],
-      "@server/*": [
+      "@/*": [
         "./src/*"
       ]
     }
