--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -5,9 +5,9 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files --no-copy-ignored",
-    "start": "node dist/server.js",
-    "dev": "tsnd -r tsconfig-paths/register --respawn --transpile-only --ignore-watch node_modules --no-notify src/server.ts"
+    "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files --no-copy-ignored --out-file-extension .mjs",
+    "start": "node --experimental-modules dist/main/server.mjs",
+    "dev": "tsnd -r tsconfig-paths/register --respawn --transpile-only --ignore-watch node_modules --no-notify src/main/server.ts"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -30,6 +30,7 @@
     "@types/mongoose": "^5.10.1",
     "@types/uuid": "^8.3.0",
     "@types/yup": "^0.29.9",
+    "babel-plugin-add-import-extension": "^1.4.3",
     "babel-plugin-module-resolver": "^4.0.0",
     "ts-node-dev": "^1.0.0",
     "tsconfig-paths": "^3.9.0"
