--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -12,14 +12,14 @@
       "@repositories/*": [
         "src/external/repositories/*"
       ],
+      "@main/*": [
+        "./src/main/*"
+      ],
       "@shared/*": [
         "./src/shared/*"
       ],
       "@useCases/*": [
         "./src/useCases/*"
-      ],
-      "@/*": [
-        "./src/*"
       ]
     }
   },
