--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -28,10 +28,12 @@
     "@types/cors": "^2.8.8",
     "@types/express": "^4.17.9",
     "@types/mongoose": "^5.10.1",
+    "@types/supertest": "^2.0.10",
     "@types/uuid": "^8.3.0",
     "@types/yup": "^0.29.9",
     "babel-plugin-add-import-extension": "^1.4.3",
     "babel-plugin-module-resolver": "^4.0.0",
+    "supertest": "^6.0.1",
     "ts-node-dev": "^1.0.0",
     "tsconfig-paths": "^3.9.0"
   }
