Fixed server run dev script

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@rep-finances-app/server",
   "version": "1.0.0",
-  "main": "src/server.ts",
+  "main": "src/main/server.ts",
   "license": "MIT",
   "type": "module",
   "scripts": {
