--- a/packages/server/Dockerfile
+++ b/packages/server/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:12.14.1-alpine3.11 AS build
+FROM node:12.20.0-alpine3.12 AS build
 
 COPY . .
 RUN yarn install
@@ -6,9 +6,9 @@ RUN yarn audit
 RUN yarn run build
 
 
-FROM node:12.14.1-alpine3.11
+FROM node:12.20.0-alpine3.12
 COPY --from=build dist .
 COPY --from=build node_modules ./node_modules
 
 ENTRYPOINT [ "node" ]
-CMD [ "server.js" ]
+CMD [ "main/server.mjs" ]
