Updated interface to server

--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -18,7 +18,8 @@
       "@utils/*": [
         "./src/utils/*"
       ]
-    }
+    },
+    "isolatedModules": true
   },
   "include": [
     "next-env.d.ts",
