--- a/.github/workflows/build-api.yml
+++ b/.github/workflows/build-api.yml
@@ -1,29 +1,22 @@
-# This is a basic workflow to help you get started with Actions
+name: Build & Deploy (Production)
 
-name: CI
-
-# Controls when the action will run. 
 on:
-  # Triggers the workflow on push or pull request events but only for the production branch
   push:
     branches: [ production ]
-  pull_request:
-    branches: [ production ]
+    paths:
+      - 'packages/server/**'
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+      
+      - name: Setup Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12.x
 
       - name: Login to Heroku Container registry
         env: 
