Updated workflow - Set workspace

--- a/.github/workflows/build-api.yml
+++ b/.github/workflows/build-api.yml
@@ -18,6 +18,9 @@ jobs:
         with:
           node-version: 12.x
 
+      - name: Set workspace
+        working-directory: 'packages/server'
+
       - name: Login to Heroku Container registry
         env: 
           HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
