--- a/.github/workflows/build-api.yml
+++ b/.github/workflows/build-api.yml
@@ -11,7 +11,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2
       
       - name: Setup Node.js
         uses: actions/setup-node@v1
