--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -10,19 +10,21 @@
   "dependencies": {
     "@chakra-ui/icons": "^1.0.2",
     "@chakra-ui/react": "^1.0.3",
+    "@chakra-ui/system": "^1.1.3",
     "@emotion/react": "^11.1.2",
     "@emotion/styled": "^11.0.0",
     "axios": "^0.21.0",
-    "framer-motion": "^2.9.5",
+    "framer-motion": "^3.1.4",
     "moment": "^2.29.1",
-    "next": "10.0.3",
+    "next": "^10.0.3",
     "nprogress": "^0.2.0",
-    "react": "17.0.1",
+    "react": "^16.8.0",
     "react-datetime": "^3.0.4",
-    "react-dom": "17.0.1",
+    "react-dom": "^16.8.0",
     "typescript": "^4.1.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.10",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.10",
     "@types/nprogress": "^0.2.0",
