Update use cases to handle new entities error handling strategy along with test cases

--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -3,6 +3,9 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
+      "@tests/*": [
+        "__tests__/*"
+      ],
       "@presentation/*": [
         "src/adapters/presentation/*"
       ],
