--- a/packages/server/Dockerfile
+++ b/packages/server/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:14.15.3-alpine3.12 AS build
+FROM node:current-alpine AS build
 
 COPY . .
 RUN yarn install
@@ -6,7 +6,7 @@ RUN yarn audit
 RUN yarn run build
 
 
-FROM node:14.15.3-alpine3.12
+FROM node:current-alpine
 COPY --from=build dist .
 COPY --from=build node_modules ./node_modules
 
