--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -14,7 +14,9 @@
     "express": "^4.17.1",
     "mongodb": "^3.6.3",
     "mongoose": "^5.10.18",
+    "swagger-ui-express": "^4.1.6",
     "uuid": "^8.3.1",
+    "yamljs": "^0.3.0",
     "yup": "^0.32.1"
   },
   "devDependencies": {
@@ -27,7 +29,9 @@
     "@types/express": "^4.17.9",
     "@types/mongoose": "^5.10.1",
     "@types/supertest": "^2.0.10",
+    "@types/swagger-ui-express": "^4.1.2",
     "@types/uuid": "^8.3.0",
+    "@types/yamljs": "^0.2.31",
     "@types/yup": "^0.29.9",
     "babel-plugin-add-import-extension": "^1.4.3",
     "babel-plugin-module-resolver": "^4.0.0",
