--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -5,9 +5,10 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files --no-copy-ignored --out-file-extension .mjs",
+    "swagger:merge": "swagger-cli bundle src/main/docs/index.yaml --outfile src/main/docs/swagger.yaml --type yaml",
+    "build": "yarn run swagger:merge & babel src --extensions \".js,.ts\" --out-dir dist --copy-files --no-copy-ignored --out-file-extension .mjs",
     "start": "node --experimental-modules dist/main/server.mjs",
-    "dev": "tsnd -r tsconfig-paths/register --respawn --transpile-only --ignore-watch node_modules --no-notify src/main/server.ts"
+    "dev": "yarn run swagger:merge & tsnd -r tsconfig-paths/register --respawn --transpile-only --ignore-watch node_modules --no-notify src/main/server.ts"
   },
   "dependencies": {
     "dotenv": "^8.2.0",
