Add error responses to swagger paths

--- a/packages/server/src/main/docs/paths/balance/get.yaml
+++ b/packages/server/src/main/docs/paths/balance/get.yaml
@@ -13,3 +13,5 @@ responses:
           properties:
             balance:
               $ref: '../../components/schemas/Balance.yaml'
+  '500':
+    $ref: '../../components/responses/Server.yaml'
