--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -4,7 +4,7 @@
     "baseUrl": ".",
     "paths": {
       "@tests/*": [
-        "__tests__/*"
+        "__tests__/__helpers__/*"
       ],
       "@shared/*": [
         "src/shared/*"
