--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -12,6 +12,9 @@
       "@components/*": [
         "./src/components/*"
       ],
+      "@modules": [
+        "./src/modules"
+      ],
       "@theme/*": [
         "./src/theme/*"
       ],
