--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -15,6 +15,9 @@
       "@modules": [
         "./src/modules"
       ],
+      "@modules/*": [
+        "./src/modules/*"
+      ],
       "@theme/*": [
         "./src/theme/*"
       ],
