Update eslint config

--- a/packages/eslint-config/.eslintrc.json
+++ b/packages/eslint-config/.eslintrc.json
@@ -84,6 +84,7 @@
           "/^@useCases/",
           "/^@repositories/",
           "/^@components/",
+          "/^@modules/",
           "/^@theme/",
           "/^@utils/",
           [
