--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.1.2",
     "@emotion/styled": "^11.0.0",
     "axios": "^0.21.0",
+    "formik": "^2.2.9",
     "framer-motion": "^3.1.4",
     "next": "^10.0.3",
     "nprogress": "^0.2.0",
