Update entities components and errors

--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -9,8 +9,11 @@
       "@shared/*": [
         "src/shared/*"
       ],
+      "@errors/*": [
+        "src/domain/errors/*"
+      ],
       "@entities/*": [
-        "src/entities/*"
+        "src/domain/entities/*"
       ],
       "@useCases/*": [
         "src/useCases/*"
