--- a/packages/eslint-config/.eslintrc.json
+++ b/packages/eslint-config/.eslintrc.json
@@ -80,6 +80,7 @@
           "/^@config/",
           "/^@shared/",
           "/^@tests/",
+          "/^@errors/",
           "/^@entities/",
           "/^@useCases/",
           "/^@repositories/",
